# comic-viewer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
python/: requirements.txt  tts_server.py  tts_server.spec  tts_webui.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ComicCard.tsx  ComicGrid.tsx  PageIndicator.tsx  TopBar.tsx  TtsAudioPlayer.tsx  TtsFloatingButton.tsx  TtsStatusIndicator.tsx  ZoomIndicator.tsx
src/hooks/: useFontSize.ts  useLastFolder.ts  useLazyLoad.ts  useReadingProgress.ts  useTextSelection.ts  useTts.ts  useZoom.ts
src/pages/: HomePage.tsx  ReaderPage.tsx  TextReaderPage.tsx
