[package]
name = "comic-viewer"
version = "0.1.0"
description = "A desktop comic viewer"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "comic_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
natord = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
